Nav: Add lined variant, more vertical options, and new reverse modifier

--- a/test/visual/nav.html
+++ b/test/visual/nav.html
@@ -119,9 +119,60 @@
         </li>
     </ul>
 
+    <h2>Lined</h2>
+
+    <ul class="nav nav-lined">
+        <li class="nav-item">
+            <a class="nav-link active" href="#">Active</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Another link</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link disabled" href="#">Disabled</a>
+        </li>
+    </ul>
+
+    <h2>Stacked Tabs</h2>
+
+    <ul class="nav nav-tabs nav-vertical w-25">
+        <li class="nav-item">
+            <a class="nav-link active" href="#">Active</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link disabled" href="#">Disabled</a>
+        </li>
+    </ul>
+
     <h2>Stacked Pills</h2>
 
     <ul class="nav nav-pills nav-vertical">
+        <li class="nav-item">
+            <a class="nav-link active" href="#">Active</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link disabled" href="#">Disabled</a>
+        </li>
+    </ul>
+
+    <h2>Stacked Lined</h2>
+
+    <ul class="nav nav-lined nav-vertical w-25 border-e">
         <li class="nav-item">
             <a class="nav-link active" href="#">Active</a>
         </li>
