Navbar: Improve accessibility of toggle examples

--- a/site/4.3/examples/navbar-offcanvas/index.html
+++ b/site/4.3/examples/navbar-offcanvas/index.html
@@ -31,7 +31,7 @@ body {
 <nav class="navbar navbar-expand-lg navbar-light bg-light flex-between fixed-top">
     <div class="container-fluid flex-between">
         <a href="#" class="navbar-brand">Offcanvas Navbar</a>
-        <button class="navbar-toggle" type="button" data-cfw="offcanvas" data-cfw-offcanvas-target="#offcanvasNavbar">
+        <button class="navbar-toggle" type="button" data-cfw="offcanvas" data-cfw-offcanvas-target="#offcanvasNavbar" aria-label="Toggle navigation">
             <span aria-hidden="true">&#8801;</span>
         </button>
 
