--- a/test/visual/navbar.html
+++ b/test/visual/navbar.html
@@ -47,7 +47,7 @@
 <h2>Basic Navbars</h2>
 
 <nav class="navbar navbar-light bg-light">
-    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarB0">
+    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarB0" aria-label="Toggle navigation">
         <span aria-hidden="true">&#8801;</span>
     </button>
     <a href="#" class="navbar-brand ms-0_5">Basic</a>
@@ -87,7 +87,7 @@
 
 <nav class="navbar navbar-light bg-light flex-between">
     <a href="#" class="navbar-brand">Basic</a>
-    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarB1">
+    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarB1" aria-label="Toggle navigation">
         <span aria-hidden="true">&#8801;</span>
     </button>
 
@@ -122,7 +122,7 @@
 
 <nav class="navbar navbar-expand navbar-light bg-light">
     <a href="#" class="navbar-brand">Expand Always</a>
-    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR0">
+    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR0" aria-label="Toggle navigation">
         <span aria-hidden="true">&#8801;</span>
     </button>
 
@@ -155,7 +155,7 @@
 
 <nav class="navbar navbar-expand-sm navbar-light bg-light flex-between">
     <a href="#" class="navbar-brand">Expand at `sm`</a>
-    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR1">
+    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR1" aria-label="Toggle navigation">
         <span aria-hidden="true">&#8801;</span>
     </button>
 
@@ -188,7 +188,7 @@
 
 <nav class="navbar navbar-expand-md navbar-light bg-light flex-between">
     <a href="#" class="navbar-brand">Expand at `md`</a>
-    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR2">
+    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR2" aria-label="Toggle navigation">
         <span aria-hidden="true">&#8801;</span>
     </button>
 
@@ -221,7 +221,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light flex-between">
     <a href="#" class="navbar-brand">Expand at `lg`</a>
-    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR3">
+    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR3" aria-label="Toggle navigation">
         <span aria-hidden="true">&#8801;</span>
     </button>
 
@@ -254,7 +254,7 @@
 
 <nav class="navbar navbar-expand-xl navbar-light bg-light flex-between">
     <a href="#" class="navbar-brand">Expand at `xl`</a>
-    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR4">
+    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR4" aria-label="Toggle navigation">
         <span aria-hidden="true">&#8801;</span>
     </button>
 
@@ -295,7 +295,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light flex-between">
     <a href="#" class="navbar-brand">Justified</a>
-    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarJ0">
+    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarJ0" aria-label="Toggle navigation">
         <span aria-hidden="true">&#8801;</span>
     </button>
 
@@ -331,7 +331,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light flex-between">
     <div class="container">
         <a href="#" class="navbar-brand">Container</a>
-        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarC0">
+        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarC0" aria-label="Toggle navigation">
             <span aria-hidden="true">&#8801;</span>
         </button>
 
@@ -366,7 +366,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light px-0">
     <div class="container-fluid">
         <a href="#" class="navbar-brand">Container</a>
-        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarC1">
+        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarC1" aria-label="Toggle navigation">
             <span aria-hidden="true">&#8801;</span>
         </button>
 
@@ -401,7 +401,7 @@
 <h2>Centered Navbars</h2>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarCO0">
+    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarCO0" aria-label="Toggle navigation">
         <span aria-hidden="true">&#8801;</span>
     </button>
 
@@ -431,7 +431,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarCO1">
+        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarCO1" aria-label="Toggle navigation">
             <span aria-hidden="true">&#8801;</span>
         </button>
 
@@ -465,7 +465,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light flex-between">
         <a href="#" class="navbar-brand">Expand at `lg`</a>
-        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarIC0">
+        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarIC0" aria-label="Toggle navigation">
             <span aria-hidden="true">&#8801;</span>
         </button>
 
@@ -497,7 +497,7 @@
     </nav>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarIC1">
+        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarIC1" aria-label="Toggle navigation">
             <span aria-hidden="true">&#8801;</span>
         </button>
 
