--- a/test/visual/offcanvas.html
+++ b/test/visual/offcanvas.html
@@ -323,7 +323,7 @@ body {
 <nav class="navbar navbar-light bg-light fixed-top">
   <div class="container-fluid flex-between">
     <a class="navbar-brand" href="#">Offcanvas navbar</a>
-    <button class="navbar-toggle" type="button" data-cfw="offcanvas" data-cfw-offcanvas-target="#offcanvasNavbarTop">
+    <button class="navbar-toggle" type="button" data-cfw="offcanvas" data-cfw-offcanvas-target="#offcanvasNavbarTop" aria-label="Toggle navigation">
         <span aria-hidden="true">&#8801;</span>
     </button>
     <div id="offcanvasNavbarTop" class="offcanvas offcanvas-end">
@@ -366,7 +366,7 @@ body {
 <nav class="navbar navbar-light navbar-expand-lg bg-light fixed-bottom">
   <div class="container-fluid flex-between">
     <a class="navbar-brand" href="#">Offcanvas navbar 'lg'</a>
-    <button class="navbar-toggle" type="button" data-cfw="offcanvas" data-cfw-offcanvas-target="#offcanvasNavbarBottom">
+    <button class="navbar-toggle" type="button" data-cfw="offcanvas" data-cfw-offcanvas-target="#offcanvasNavbarBottom" aria-label="Toggle navigation">
         <span aria-hidden="true">&#8801;</span>
     </button>
     <div id="offcanvasNavbarBottom" class="offcanvas offcanvas-end">
