--- a/site/4.3/examples/navbar-static-top/index.html
+++ b/site/4.3/examples/navbar-static-top/index.html
@@ -26,7 +26,7 @@ body {
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark flex-between">
     <a href="#" class="navbar-brand">Static Navbar</a>
-    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR3">
+    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR3" aria-label="Toggle navigation">
         <span aria-hidden="true">&#8801;</span>
     </button>
 
