--- a/site/4.3/examples/navbars/index.html
+++ b/site/4.3/examples/navbars/index.html
@@ -48,7 +48,7 @@
     <h2>Basic Navbars</h2>
 
     <nav class="navbar navbar-light bg-light">
-        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarB0">
+        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarB0" aria-label="Toggle navigation">
             <span aria-hidden="true">&#8801;</span>
         </button>
         <a href="#" class="navbar-brand ms-0_5">Basic</a>
@@ -82,7 +82,7 @@
 
     <nav class="navbar navbar-light bg-light flex-between">
         <a href="#" class="navbar-brand">Basic</a>
-        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarB1">
+        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarB1" aria-label="Toggle navigation">
             <span aria-hidden="true">&#8801;</span>
         </button>
 
@@ -117,7 +117,7 @@
 
     <nav class="navbar navbar-expand navbar-light bg-light">
         <a href="#" class="navbar-brand">Expand Always</a>
-        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR0">
+        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR0" aria-label="Toggle navigation">
             <span aria-hidden="true">&#8801;</span>
         </button>
 
@@ -150,7 +150,7 @@
 
     <nav class="navbar navbar-expand-sm navbar-light bg-light flex-between">
         <a href="#" class="navbar-brand">Expand at `sm`</a>
-        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR1">
+        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR1" aria-label="Toggle navigation">
             <span aria-hidden="true">&#8801;</span>
         </button>
 
@@ -183,7 +183,7 @@
 
     <nav class="navbar navbar-expand-md navbar-light bg-light flex-between">
         <a href="#" class="navbar-brand">Expand at `md`</a>
-        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR2">
+        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR2" aria-label="Toggle navigation">
             <span aria-hidden="true">&#8801;</span>
         </button>
 
@@ -216,7 +216,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light flex-between">
         <a href="#" class="navbar-brand">Expand at `lg`</a>
-        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR3">
+        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR3" aria-label="Toggle navigation">
             <span aria-hidden="true">&#8801;</span>
         </button>
 
@@ -249,7 +249,7 @@
 
     <nav class="navbar navbar-expand-xl navbar-light bg-light flex-between">
         <a href="#" class="navbar-brand">Expand at `xl`</a>
-        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR4">
+        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR4" aria-label="Toggle navigation">
             <span aria-hidden="true">&#8801;</span>
         </button>
 
@@ -284,7 +284,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light flex-between">
         <a href="#" class="navbar-brand">Justified</a>
-        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarJ0">
+        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarJ0" aria-label="Toggle navigation">
             <span aria-hidden="true">&#8801;</span>
         </button>
 
@@ -320,7 +320,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light flex-between">
         <div class="container">
             <a href="#" class="navbar-brand">Container</a>
-            <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarC0">
+            <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarC0" aria-label="Toggle navigation">
                 <span aria-hidden="true">&#8801;</span>
             </button>
 
@@ -355,7 +355,7 @@
     <h2>Centered Navbars</h2>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarCO0">
+        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarCO0" aria-label="Toggle navigation">
             <span aria-hidden="true">&#8801;</span>
         </button>
 
@@ -385,7 +385,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarCO1">
+            <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarCO1" aria-label="Toggle navigation">
                 <span aria-hidden="true">&#8801;</span>
             </button>
 
@@ -419,7 +419,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light flex-between">
             <a href="#" class="navbar-brand">Expand at `lg`</a>
-            <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarIC0">
+            <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarIC0" aria-label="Toggle navigation">
                 <span aria-hidden="true">&#8801;</span>
             </button>
 
@@ -451,7 +451,7 @@
         </nav>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarIC1">
+            <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarIC1" aria-label="Toggle navigation">
                 <span aria-hidden="true">&#8801;</span>
             </button>
 
@@ -485,7 +485,7 @@
     <nav class="navbar navbar-expand-xl navbar-light bg-light flex-between">
         <div class="container-xl px-0 px-xl-1">
             <a href="#" class="navbar-brand">Expand at `xl`</a>
-            <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarRC0">
+            <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarRC0" aria-label="Toggle navigation">
                 <span aria-hidden="true">&#8801;</span>
             </button>
 
