--- a/test/visual/modal.html
+++ b/test/visual/modal.html
@@ -37,7 +37,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light flex-between sticky-top">
   <a href="#" class="navbar-brand">Navbar</a>
-  <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbar0">
+  <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbar0" aria-label="Toggle navigation">
     <span aria-hidden="true">&#8801;</span>
   </button>
 
@@ -601,7 +601,7 @@
   <div id="another-element" class="position-relative border mb-0_5 text-center" style="height: 300px; overflow-y:scroll;">
 <nav class="navbar navbar-expand-lg navbar-light bg-light flex-between sticky-top">
   <a href="#" class="navbar-brand">Navbar</a>
-  <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbar1">
+  <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbar1" aria-label="Toggle navigation">
     <span aria-hidden="true">&#8801;</span>
   </button>
 
@@ -724,7 +724,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light flex-between fixed-bottom" style="padding-right: 10px;">
   <a href="#" class="navbar-brand">Navbar</a>
-  <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbar2">
+  <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbar2" aria-label="Toggle navigation">
     <span aria-hidden="true">&#8801;</span>
   </button>
 
