Forms: Fix Android/iOS date input sizing

--- a/test/visual/form.html
+++ b/test/visual/form.html
@@ -642,6 +642,112 @@
   </datalist>
 </div>
 
+<div class="container">
+  <h2>Number/Date Visual Tests</h2>
+
+  <h3>No layout</h3>
+
+  <div class="mb-1">
+    Text
+    <input class="form-control">
+  </div>
+  <div class="mb-1">
+    Email
+    <input type="email" class="form-control">
+  </div>
+  <div class="mb-1">
+    Number
+    <input type="number" class="form-control">
+  </div>
+  <div class="mb-1">
+    Date
+    <input type="date" class="form-control">
+  </div>
+
+  <h3>Flex</h3>
+
+  <div class="d-flex flex-wrap gap-1 mb-1">
+    <div>
+      Text
+      <input class="form-control">
+    </div>
+    <div>
+      Email
+      <input type="email" class="form-control">
+    </div>
+    <div>
+      Number
+      <input type="number" class="form-control">
+    </div>
+    <div>
+      Date
+      <input type="date" class="form-control">
+    </div>
+  </div>
+
+  <h3>Grid</h3>
+
+  <div class="row mb-1">
+    <div class="col">
+      Text
+      <input class="form-control">
+    </div>
+    <div class="col">
+      Email
+      <input type="email" class="form-control">
+    </div>
+    <div class="col">
+      Number
+      <input type="number" class="form-control">
+    </div>
+    <div class="col">
+      Date
+      <input type="date" class="form-control">
+    </div>
+  </div>
+
+  <h3>Flex - sized</h3>
+
+  <div class="d-flex flex-wrap gap-1 mb-1">
+    <div>
+      Text
+      <input class="form-control form-control-small">
+    </div>
+    <div>
+      Email
+      <input type="email" class="form-control form-control-small">
+    </div>
+    <div>
+      Number
+      <input type="number" class="form-control form-control-small">
+    </div>
+    <div>
+      Date
+      <input type="date" class="form-control form-control-small">
+    </div>
+  </div>
+
+  <h3>Grid - sized</h3>
+
+  <div class="row mb-1">
+    <div class="col">
+      Text
+      <input class="form-control form-control-small">
+    </div>
+    <div class="col">
+      Email
+      <input type="email" class="form-control form-control-small">
+    </div>
+    <div class="col">
+      Number
+      <input type="number" class="form-control form-control-small">
+    </div>
+    <div class="col">
+      Date
+      <input type="date" class="form-control form-control-small">
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
