Doc content tweaks and typo fixes

--- a/test/visual/list.html
+++ b/test/visual/list.html
@@ -559,7 +559,7 @@
     <li class="list-item">Default list item</li>
     <li class="list-item list-item-primary">Primary list item</li>
     <li class="list-item list-item-success">Success list item</li>
-    <li class="list-item list-item-info">Inof list item</li>
+    <li class="list-item list-item-info">Info list item</li>
     <li class="list-item list-item-warning">Warning list item</li>
     <li class="list-item list-item-danger">Danger list item</li>
     <li class="list-item list-item-light">Light list item</li>
