Docs: add missing `aria-disabled="true"` to disabled anchors

--- a/site/4.3/examples/navbar-fixed-bottom/index.html
+++ b/site/4.3/examples/navbar-fixed-bottom/index.html
@@ -43,7 +43,7 @@ body {
                 <a href="#" class="nav-link">Link</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
+                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropup<span class="caretup ms-0_25" aria-hidden="true"></span></a>
