--- a/site/4.3/examples/navbars/index.html
+++ b/site/4.3/examples/navbars/index.html
@@ -62,7 +62,7 @@
                     <a href="#" class="nav-link">Link</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
+                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a href="#" role="button" class="nav-link" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
@@ -95,7 +95,7 @@
                     <a href="#" class="nav-link">Link</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
+                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a href="#" role="button" class="nav-link" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
@@ -130,7 +130,7 @@
                     <a href="#" class="nav-link">Link</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
+                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
@@ -163,7 +163,7 @@
                     <a href="#" class="nav-link">Link</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
+                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
@@ -196,7 +196,7 @@
                     <a href="#" class="nav-link">Link</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
+                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
@@ -229,7 +229,7 @@
                     <a href="#" class="nav-link">Link</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
+                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
@@ -262,7 +262,7 @@
                     <a href="#" class="nav-link">Link</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
+                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
@@ -297,7 +297,7 @@
                     <a href="#" class="nav-link">Link</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
+                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
@@ -333,7 +333,7 @@
                         <a href="#" class="nav-link">Link</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled">Disabled</a>
+                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
@@ -369,7 +369,7 @@
                     <a href="#" class="nav-link">Link</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
+                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
@@ -399,7 +399,7 @@
                         <a href="#" class="nav-link">Link</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled">Disabled</a>
+                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
@@ -432,7 +432,7 @@
                         <a href="#" class="nav-link">Link</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled">Disabled</a>
+                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
@@ -465,7 +465,7 @@
                         <a href="#" class="nav-link">Link</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled">Disabled</a>
+                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
@@ -498,7 +498,7 @@
                         <a href="#" class="nav-link">Link</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled">Disabled</a>
+                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
