Docs: update a few more external links with target and rel

--- a/site/index.html
+++ b/site/index.html
@@ -28,7 +28,7 @@ layout: home
           <div class="col-12 mt-1">
             Current version: <strong>v{{ site.version.current }}</strong>
             <br>
-            <a href="{{ site.changelog }}" class="text-light small">Read the Changelog</a>
+            <a href="{{ site.changelog }}" class="text-light small" target="_blank" rel="noopener">Read the Changelog</a>
             <br>
             <a href="{{ site.path }}/{{ site.version.docs }}/get-started/migration/" class="text-light small">View migration notes</a>
           </div>
